update search animate

--- a/app/_templates.twig
+++ b/app/_templates.twig
@@ -2,7 +2,7 @@
 
 {% block page %}
 <div class="container" data-module="Form">
-  <a href="javascript:void(0);" class="btn-burger" data-module="ToggleClass">
+  <a href="javascript:void(0);" class="btn-burger">
     <span>Menu</span>
   </a>
   <ul>
