--- a/app/_templates/footer.twig
+++ b/app/_templates/footer.twig
@@ -127,7 +127,8 @@
 
 <footer>
 	<div class="container">
-		<p>copyright &copy; Hoozing All Right Reserved <span class="float-right">Design by <a href="#" class="link">CNM GROUP</a></span></p>
+		<p>copyright &copy; Hoozing All Right Reserved </p>
+		<!-- <span class="float-right">Design by <a href="#" class="link">CNM GROUP</a></span> -->
 
 	</div>
 </footer>
