--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -1,5 +1,5 @@
 <header data-module="Header">
-  <a class="logo" href="javascript:void(0);">
+  <a class="logo" href="\">
     <img src="./assets/images/global/logo.png" alt="" class="hide-for-small"> 
     <img src="./assets/images/global/logo.png" alt="" class="show-for-small">
   </a>
@@ -19,10 +19,10 @@
         <a href="#searchHeader" data-toggle="collapse" class="open-search collapsed"><i class="fa fa-search" aria-hidden="true"></i>Search</a>
       </li>
       <li>
-        <a href="javascript:void(0);"><i class="fa fa-file-text-o" aria-hidden="true"></i>List your property</a>
+        <a href="listing.html"><i class="fa fa-file-text-o" aria-hidden="true"></i>List your property</a>
       </li>
       <li>
-        <a href="javascript:void(0);"><i class="fa fa-heart" aria-hidden="true"></i>Favorite</a>
+        <a href="project.html"><i class="fa fa-heart" aria-hidden="true"></i>Favorite</a>
       </li>
       <li>
         <a href="upload.html"><i class="fa fa-user-circle" aria-hidden="true"></i>login</a>
@@ -30,3 +30,4 @@
     </ul>
   </nav>
 </header>
+<div class="bg-popup"></div>
