--- a/app/assets/fonts/flaticon.css
+++ b/app/assets/fonts/flaticon.css
@@ -15,7 +15,7 @@
 font-style: normal;
 margin-left: 20px;
 }
-.flaticon-a-airconditioned:before {
+.flaticon-a-:before {
 	content: "\e000";
 }
 .flaticon-a-badminton9:before {
