--- a/app/project.twig
+++ b/app/project.twig
@@ -49,94 +49,104 @@
 		
 		<h3 class="block-title" id="overview">Overview</h3>
 		<ul class="thumb-service thumb--col-4">
-			<li><i class="flaticon-a-badminton9"></i><span>badminton9</span></li>
-			<li><i class="flaticon-a-bicycle14"></i><span>bicycle14</span></li>
-			<li><i class="flaticon-a-cable4"></i><span>cable4</span></li>
-			<li><i class="flaticon-a-connection30"></i><span>connection30</span></li>
-			<li><i class="flaticon-a-cooking35"></i><span>cooking35</span></li>
-			<li><i class="flaticon-a-cooking7"></i><span>cooking7</span></li>
-			<li><i class="flaticon-a-covered16"></i><span>covered16</span></li>
-			<li><i class="flaticon-a-credit56"></i><span>credit56</span></li>
-			<li><i class="flaticon-a-customerservice14"></i><span>customerservice14</span></li>
-			<li><i class="flaticon-a-dog50"></i><span>dog50</span></li>
-			<li><i class="flaticon-a-first22"></i><span>first22</span></li>
-			<li><i class="flaticon-a-flame11"></i><span>flame11</span></li>
-			<li><i class="flaticon-a-fun"></i><span>fun</span></li>
-			<li><i class="flaticon-a-heating1"></i><span>heating1</span></li>
-			<li><i class="flaticon-a-kitchen56"></i><span>kitchen56</span></li>
-			<li><i class="flaticon-a-kitchen6"></i><span>kitchen6</span></li>
-			<li><i class="flaticon-a-logotype117"></i><span>logotype117</span></li>
-			<li><i class="flaticon-a-man244"></i><span>man244</span></li>
-			<li><i class="flaticon-a-medical12"></i><span>medical12</span></li>
-			<li><i class="flaticon-a-money385"></i><span>money385</span></li>
-			<li><i class="flaticon-a-network11"></i><span>network11</span></li>
-			<li><i class="flaticon-a-parking19"></i><span>parking19</span></li>
-			<li><i class="flaticon-a-parking6"></i><span>parking6</span></li>
-			<li><i class="flaticon-a-phonecall10"></i><span>phonecall10</span></li>
-			<li><i class="flaticon-a-pipe9"></i><span>pipe9</span></li>
-			<li><i class="flaticon-a-plug38"></i><span>plug38</span></li>
-			<li><i class="flaticon-a-policeman1"></i><span>policeman1</span></li>
-			<li><i class="flaticon-a-pool8"></i><span>pool8</span></li>
-			<li><i class="flaticon-a-public6"></i><span>public6</span></li>
-			<li><i class="flaticon-a-public8"></i><span>public8</span></li>
-			<li><i class="flaticon-a-racket1"></i><span>racket1</span></li>
-			<li><i class="flaticon-a-screens6"></i><span>screens6</span></li>
-			<li><i class="flaticon-a-shopper1"></i><span>shopper1</span></li>
-			<li><i class="flaticon-a-shopping-cart8"></i><span>cart8</span></li>
-			<li><i class="flaticon-a-smoke2"></i><span>smoke2</span></li>
-			<li><i class="flaticon-a-swimming21"></i><span>swimming21</span></li>
-			<li><i class="flaticon-a-tea24"></i><span>tea24</span></li>
-			<li><i class="flaticon-a-temperature1"></i><span>temperature1</span></li>
-			<li><i class="flaticon-a-terrace"></i><span>terrace</span></li>
-			<li><i class="flaticon-a-tub1"></i><span>tub1</span></li>
-			<li><i class="flaticon-a-washingmachine3"></i><span>washingmachine3</span></li>
-			<li><i class="flaticon-a-yoga13"></i><span>yoga13</span></li>
+			<li>
+				<i class="fa fa-home"></i>
+				<div class="info-fa">
+					<p>
+						<b>Apartment</b><br />
+						Project Type
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-truck"></i>
+				<div class="info-fa">
+					<p>
+						<b>Finished</b><br />
+						Project Status
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-building"></i>
+				<div class="info-fa">
+					<p>
+						<b>4-18 Floors</b><br />
+						Floors
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-bed"></i>
+				<div class="info-fa">
+					<p>
+						<b>2-3</b><br />
+						Bedrooms
+					</p>
+				</div>
+			</li>
+		
+			<li>
+				<i class="fa fa-home"></i>
+				<div class="info-fa">
+					<p>
+						<b>Apartment</b><br />
+						Project Type
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-truck"></i>
+				<div class="info-fa">
+					<p>
+						<b>Finished</b><br />
+						Project Status
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-building"></i>
+				<div class="info-fa">
+					<p>
+						<b>4-18 Floors</b><br />
+						Floors
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-bed"></i>
+				<div class="info-fa">
+					<p>
+						<b>2-3</b><br />
+						Bedrooms
+					</p>
+				</div>
+			</li>
 		</ul>
+		
+		<h3 class="block-title" id="facilities">FACITLITIES</h3>
 
-		<h3 class="block-title" id="facilities">Facilities</h3>
 		<ul class="thumb-service thumb--col-4">
-			<li><i class="flaticon-a-badminton9"></i><span>badminton9</span></li>
-			<li><i class="flaticon-a-bicycle14"></i><span>bicycle14</span></li>
-			<li><i class="flaticon-a-cable4"></i><span>cable4</span></li>
-			<li><i class="flaticon-a-connection30"></i><span>connection30</span></li>
-			<li><i class="flaticon-a-cooking35"></i><span>cooking35</span></li>
-			<li><i class="flaticon-a-cooking7"></i><span>cooking7</span></li>
-			<li><i class="flaticon-a-covered16"></i><span>covered16</span></li>
-			<li><i class="flaticon-a-credit56"></i><span>credit56</span></li>
-			<li><i class="flaticon-a-customerservice14"></i><span>customerservice14</span></li>
-			<li><i class="flaticon-a-dog50"></i><span>dog50</span></li>
-			<li><i class="flaticon-a-first22"></i><span>first22</span></li>
-			<li><i class="flaticon-a-flame11"></i><span>flame11</span></li>
-			<li><i class="flaticon-a-fun"></i><span>fun</span></li>
-			<li><i class="flaticon-a-heating1"></i><span>heating1</span></li>
-			<li><i class="flaticon-a-kitchen56"></i><span>kitchen56</span></li>
-			<li><i class="flaticon-a-kitchen6"></i><span>kitchen6</span></li>
-			<li><i class="flaticon-a-logotype117"></i><span>logotype117</span></li>
-			<li><i class="flaticon-a-man244"></i><span>man244</span></li>
-			<li><i class="flaticon-a-medical12"></i><span>medical12</span></li>
-			<li><i class="flaticon-a-money385"></i><span>money385</span></li>
-			<li><i class="flaticon-a-network11"></i><span>network11</span></li>
-			<li><i class="flaticon-a-parking19"></i><span>parking19</span></li>
-			<li><i class="flaticon-a-parking6"></i><span>parking6</span></li>
-			<li><i class="flaticon-a-phonecall10"></i><span>phonecall10</span></li>
-			<li><i class="flaticon-a-pipe9"></i><span>pipe9</span></li>
-			<li><i class="flaticon-a-plug38"></i><span>plug38</span></li>
-			<li><i class="flaticon-a-policeman1"></i><span>policeman1</span></li>
-			<li><i class="flaticon-a-pool8"></i><span>pool8</span></li>
-			<li><i class="flaticon-a-public6"></i><span>public6</span></li>
-			<li><i class="flaticon-a-public8"></i><span>public8</span></li>
-			<li><i class="flaticon-a-racket1"></i><span>racket1</span></li>
-			<li><i class="flaticon-a-screens6"></i><span>screens6</span></li>
-			<li><i class="flaticon-a-shopper1"></i><span>shopper1</span></li>
-			<li><i class="flaticon-a-shopping-cart8"></i><span>cart8</span></li>
-			<li><i class="flaticon-a-smoke2"></i><span>smoke2</span></li>
-			<li><i class="flaticon-a-swimming21"></i><span>swimming21</span></li>
-			<li><i class="flaticon-a-tea24"></i><span>tea24</span></li>
-			<li><i class="flaticon-a-temperature1"></i><span>temperature1</span></li>
-			<li><i class="flaticon-a-terrace"></i><span>terrace</span></li>
-			<li><i class="flaticon-a-tub1"></i><span>tub1</span></li>
-			<li><i class="flaticon-a-washingmachine3"></i><span>washingmachine3</span></li>
-			<li><i class="flaticon-a-yoga13"></i><span>yoga13</span></li>
+			<li><i class="flaticon-a-public6"></i><span>Community hall</span></li>
+			<li><i class="flaticon-a-badminton9"></i><span>badminton court</span></li>
+			<li><i class="flaticon-a-phonecall10"></i><span>Intercom</span></li>
+			<li><i class="flaticon-a-bicycle14"></i><span>Gymnasium</span></li>
+			<li><i class="flaticon-a-tea24"></i><span>Coffee shop</span></li>
+			<li><i class="flaticon-a-money385"></i><span>Access card</span></li>
+			<li><i class="flaticon-a-shopper1"></i><span>Shooping mall</span></li>
+			<li><i class="flaticon-a-yoga13"></i><span>Yoga &amp; meditation</span></li>
+			<li><i class="flaticon-a-customerservice14"></i><span>Maintance staff</span></li>
+			<li><i class="flaticon-a-shopping-cart8"></i><span>supper market</span></li>
+			<li><i class="flaticon-a-swimming21"></i><span>Swimming Pool</span></li>
+			<li><i class="flaticon-a-policeman1"></i><span>Security Guards</span></li>
+			<li><i class="flaticon-a-pool8"></i><span>Indoor game</span></li>
+			<li><i class="flaticon-a-medical12"></i><span>Phamacy</span></li>
+			<li><i class="flaticon-a-man244"></i><span>Banking /ATM</span></li>
+			<li><i class="flaticon-a-racket1"></i><span>tennis court</span></li>
+			<li><i class="flaticon-a-covered16"></i><span>Restaurant</span></li>            
+			<li><i class="flaticon-a-network11"></i><span>Club house</span></li>
+			<li><i class="flaticon-a-plug38"></i><span>24h Electricity Backup</span></li>
+			<li><i class="flaticon-a-parking19"></i><span>Parking</span></li>
 		</ul>
 
 	</div>
@@ -152,61 +162,61 @@
 </section>
 
 <section class="list-table">
-    <div class="container">
-      <h2 class="section-title">All Listing in Starhills</h2>
+	<div class="container">
+		<h2 class="section-title">All Listing in Starhills</h2>
 
-      <table id="myTable" data-module="TableSort" data-toggle="table"  data-sort-name="code" data-sort-order="asc">
-        <thead>
-          <tr>
-            <th data-field="code" data-sortable="true">House code</th>
-            <th data-field="numBed" data-sortable="true">Bedroom</th>
-            <th data-field="numBath" data-sortable="true">Bathroom</th>
-            <th data-field="area" data-sortable="true">Area</th>
-            <th data-field="floor" data-sortable="true">Floor</th>
-            <th data-field="furnished" data-sortable="true">Furnished</th>
-            <th data-field="view" data-sortable="true">View</th>
-            <th data-field="price" data-sortable="true">Price</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>AH02163</td>
-            <td>1 bed</td>
-            <td>1 bath</td>
-            <td>80sqm</td>
-            <td>6th</td>
-            <td>furnished</td>
-            <td>River</td>
-            <td>$1000</td>
-            <td><a href="#">View</a></td>
-          </tr>
-          <tr>
-            <td>BH02165</td>
-            <td>1 bed</td>
-            <td>1 bath</td>
-            <td>80sqm</td>
-            <td>6th</td>
-            <td>empty</td>
-            <td>River</td>
-            <td>$2000</td>
-            <td><a href="#">View</a></td>
-          </tr>
-          <tr>
-            <td>H02165</td>
-            <td>1 bed</td>
-            <td>1 bath</td>
-            <td>70sqm</td>
-            <td>6th</td>
-            <td>empty</td>
-            <td>River</td>
-            <td>$3000</td>
-            <td><a href="#">View</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </section>
+		<table id="myTable" data-module="TableSort" data-toggle="table"  data-sort-name="code" data-sort-order="asc">
+			<thead>
+				<tr>
+					<th data-field="code" data-sortable="true">House code</th>
+					<th data-field="numBed" data-sortable="true">Bedroom</th>
+					<th data-field="numBath" data-sortable="true">Bathroom</th>
+					<th data-field="area" data-sortable="true">Area</th>
+					<th data-field="floor" data-sortable="true">Floor</th>
+					<th data-field="furnished" data-sortable="true">Furnished</th>
+					<th data-field="view" data-sortable="true">View</th>
+					<th data-field="price" data-sortable="true">Price</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>AH02163</td>
+					<td>1 bed</td>
+					<td>1 bath</td>
+					<td>80sqm</td>
+					<td>6th</td>
+					<td>furnished</td>
+					<td>River</td>
+					<td>$1000</td>
+					<td><a href="#">View</a></td>
+				</tr>
+				<tr>
+					<td>BH02165</td>
+					<td>1 bed</td>
+					<td>1 bath</td>
+					<td>80sqm</td>
+					<td>6th</td>
+					<td>empty</td>
+					<td>River</td>
+					<td>$2000</td>
+					<td><a href="#">View</a></td>
+				</tr>
+				<tr>
+					<td>H02165</td>
+					<td>1 bed</td>
+					<td>1 bath</td>
+					<td>70sqm</td>
+					<td>6th</td>
+					<td>empty</td>
+					<td>River</td>
+					<td>$3000</td>
+					<td><a href="#">View</a></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</section>
 
 <section class="list-feature">
 	<div class="container">
