--- a/app/search.twig
+++ b/app/search.twig
@@ -56,11 +56,43 @@
 
 </section>
 
-<section class="search-content " data-module="SearchControl">
+<section class="search-content search-content--reduce" data-module="SearchControl">
 	
 	<div class="filter-wrapper collapse" id="collapseFilter">
 		<a href="#collapseFilter" data-toggle="collapse" class="close-modal"><i class="fa fa-close"></i></a>
 		<div class="container">
+			<h3 class="block-title">Basic fetures</h3>
+			<div class="input-group date" data-provide="datepicker-inline">
+				<input type="text" class="form-control">
+				<div class="input-group-addon">
+					<span class="glyphicon glyphicon-th"></span>
+				</div>
+			</div>
+
+			<div class="select-wrapper select--big">
+				<select name="type" id="type">
+					<option  disabled="disabled" selected="selected" value="">Acomodates</option>
+					<option value="Male">2000</option>
+					<option value="Female">2001</option>
+				</select>
+			</div>
+
+			<div class="select-wrapper select--big">
+				<select name="type" id="type">
+					<option  disabled="disabled" selected="selected" value="">Furnishment</option>
+					<option value="Male">2000</option>
+					<option value="Female">2001</option>
+				</select>
+			</div>
+			<div class="select-wrapper select--big">
+				<select name="type" id="type">
+					<option  disabled="disabled" selected="selected" value="">Floor Area</option>
+					<option value="Male">2000</option>
+					<option value="Female">2001</option>
+				</select>
+			</div>
+
+
 			<h3 class="block-title">Required Amenities</h3>
 			<div class="row">
 				<div class="col-3">
@@ -256,7 +288,7 @@
 	</div>
 
 	<div class="search-detail">
-		<div class="tab-content active" id="search-grid">
+		<div class="tab-content " id="search-grid">
 			<div class="row">
 
 				<div class="thumb-item col-md-15">
@@ -271,7 +303,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -292,7 +326,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -313,7 +349,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -334,7 +372,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -355,7 +395,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -377,7 +419,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -398,7 +442,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -419,7 +465,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -440,7 +488,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -461,7 +511,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -469,7 +521,6 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 
@@ -488,7 +539,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -509,7 +562,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -530,7 +585,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -551,7 +608,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -572,7 +631,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -593,7 +654,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -601,8 +664,6 @@
 						</div>
 					</div>
 				</div>
-
-
 			</div>
 		</div>
 
@@ -621,7 +682,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -642,7 +705,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -663,7 +728,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -684,7 +751,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -708,10 +777,10 @@
 
 			</div>
 		</div>
-		<div class=" tab-content" id="search-mapview">
+		<div class=" tab-content active" id="search-mapview">
 			<div class="row">
 
-				<div class="thumb-item col-md-6">
+				<div class="thumb-item col-md-6" data-lng="106.67094305726" data-lat="10.750648587535">
 					<div class="thumb-gallery " data-module="ThumbSlide">
 						<ul class="thumb-list slider-wrapper">
 							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
@@ -722,8 +791,10 @@
 						<span class="price-tag">$600</span>
 					</div>
 					<div class="thumb-info">
-						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<a href="#0" class="select-home"><h4>house code 456</h4></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -744,7 +815,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -765,7 +838,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -786,7 +861,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -807,7 +884,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -828,7 +907,9 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3>
+							<a href="#">Pretty service appartment with bright bedroom</a>
+						</h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -841,7 +922,7 @@
 		</div>
 	</div>
 </section>
-<div class="map-result" data-module="GoogleMapAPI">
+<div class="map-result show" data-module="GoogleMapAPI">
 	<div id="map" style="height: 100vh"></div>
 </div>
 
@@ -855,9 +936,7 @@ window.storeInfo = [
 	"code": "MH021",
 	"name": "store name",
 	"city": "Ho Chi Minh",
-	"default": true,
 	"price": "$600",
-	"isOpen": true,
 	"linkAp": "#",
 	"location": {
 		"lng": 106.67094305726,
@@ -868,9 +947,7 @@ window.storeInfo = [
 	"code": "MH022",
 	"name": "store name 2",
 	"city": "Ho Chi Minh",
-	"default": true,
 	"price": "$700",
-	"isOpen": false,
 	"linkAp": "#",
 	"location": {
 		"lng": 106.66009490812,
@@ -882,9 +959,7 @@ window.storeInfo = [
 	"code": "MH023",
 	"name": "store name 3",
 	"city": "Ho Chi Minh",
-	"default": true,
 	"price": "$800",
-	"isOpen": false,
 	"linkAp": "#",
 	"location": {
 		"lng": 106.68009490812,
