--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -11,19 +11,20 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=vietnamese" rel="stylesheet">
 
-	<!-- build:css {{assetPath}}/css/vendor.css -->
-	<!-- bower:css -->
-	<link rel="stylesheet" href="/bower_components/magnific-popup/dist/magnific-popup.css" />
-	<link rel="stylesheet" href="/bower_components/slick-carousel/slick/slick.css" />
-	<link rel="stylesheet" href="/bower_components/bootstrap-table/src/bootstrap-table.css" />
-	<!-- endbower -->
+  <!-- build:css {{assetPath}}/css/vendor.css -->
+  <!-- bower:css -->
+  <link rel="stylesheet" href="/bower_components/magnific-popup/dist/magnific-popup.css" />
+  <link rel="stylesheet" href="/bower_components/slick-carousel/slick/slick.css" />
+  <link rel="stylesheet" href="/bower_components/bootstrap-table/src/bootstrap-table.css" />
+  <link rel="stylesheet" href="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" />
+  <link rel="stylesheet" href="/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" />
+  <!-- endbower -->
   <!-- endbuild -->
-  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
 
-	<!-- build:css {{assetPath}}/css/app.css -->
-	<link rel="stylesheet" href="{{assetPath}}/css/app.css">
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
+  <!-- build:css {{assetPath}}/css/app.css -->
+  <link rel="stylesheet" href="{{assetPath}}/css/app.css">
 	<!-- endbuild -->
-  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css" rel="stylesheet"/> -->
 
 </head>
 
@@ -68,14 +69,15 @@
 <script src="/bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
 <script src="/bower_components/slick-carousel/slick/slick.js"></script>
 <script src="/bower_components/bootstrap-table/src/bootstrap-table.js"></script>
+<script src="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"></script>
+<script src="/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+
 <script src="{{assetPath}}/js/app.js"></script>
 
-<script src="{{assetPath}}/js/lib/bootstrap-tagsinput.js"></script>  
-<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script> -->
 
 
 </body>
