--- a/app/assets/css/blocks/_header.scss
+++ b/app/assets/css/blocks/_header.scss
@@ -30,17 +30,17 @@ header {
   }
 }
 .wrapper-inputtags {
-  @include absolute(top 50% left 200px);
+  @include absolute(top 50% left 20%);
   border:1px solid #333;
   background: #fff;
   padding: 0px;
   height: 45px;
-  width: auto;
-  max-width: 500px;
+  width: 60%;
   border-radius: 3px;
-  transform:translate(20px,-50%);
+  transform:translate(40px,-50%);
+  transition:0.3s transform ease-out;
   vertical-align: middle;
-  z-index: 10;
+  z-index: 1;
 
   &.collapse {
     opacity: 0;
@@ -51,9 +51,9 @@ header {
   }
 
   &.show {
-    transition:0.3s ease-out;
     transform: translate(0,-50%);
     opacity: 1;
+    z-index: 3;
   }
   .fa {
     color: #999;
@@ -65,48 +65,68 @@ header {
     // display: none;
     border:none;
     height: 35px;
-    width: auto;
-    min-width: 150px;
+    width: 100%;
+  }
+}
+
+.bg-popup {
+  position: fixed;
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 9;
+  opacity: 0;
+  transition:0.5s ease-out opacity;
+
+  &.show {
+    width: 100%;
+    opacity: 1;
   }
 }
 
 
 .form-wrapper {
   position: relative;
-  padding: 5px 15px 5px 35px;
+  padding: 1px 35px;
+
+  > .bootstrap-tagsinput {
+    padding: 3px 5px;
+    background: #fff;
+    border-radius: 3px;
+  }
 }
 #searchHeader {
   display: block;
+  
+  .collapse.show {
+    display: inline-block;
+  }
 
   .btn-submit {
     color: #999;
-    @include absolute(bottom 12px left 8px);
+    @include absolute(top 12px left 8px);
     background: none;
     border: none;
     outline: none;
   } 
-  .btn-close {
+  .close-form {
+    @include absolute(top 6px right 8px);
     background: none;
     border:none;
     outline: none;
     padding: 0;
-    float: right;
-    vertical-align: middle;
-    display: inline-block;
     font-size: 20px;
   }
 }
 
 
 .bootstrap-tagsinput {
-  display: inline-block;
-  // max-width: 360px;
-  // overflow: hidden;
-  // height: 40px;
 
-  > * {
-    display: inline-block;
-  }
+  // > * {
+  //   display: inline-block;
+  // }
 
   [data-role="remove"] {
     color:#333;
@@ -122,6 +142,7 @@ header {
   }
   .label-info {
     display: inline-block;
+    margin: 3px 0;
     background: $gray-light;
   }
 }
@@ -146,7 +167,7 @@ nav {
 
 .nav__menu { 
   @include fixed(top 42px left);
-  z-index: 9;
+  z-index: 2;
   width: 100%;
   list-style: none;
   margin: 0;
@@ -169,7 +190,11 @@ nav {
       position: relative;
       margin-right: 10px;
       vertical-align: middle;
+      transition:0.5s ease-out;
+      opacity: 1;
+      transform: scale(1);
     }
+
 
     &.active {
       a {
@@ -179,110 +204,115 @@ nav {
         }
       }
     }
-
-    a {
-      display: block;
-      // font-size: $size-xs;
-      text-transform: capitalize;
-      text-align: left;
-      line-height: 42px;
-      letter-spacing: 1px;
-      padding: 0 5px;
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.85);
-      transform: translateX(40px);
+  }
+  &.off {
+    li {
+      transform: scale(0.9, 0.9);
       opacity: 0;
-      transition: all 0.2s ease-out 0.05s;
-      border-bottom: 1px solid #80c6a2;
-      @include screen(medium,false){
-        br {
-          display: none;
-        }
+    }
+  }
+
+  a {
+    display: block;
+    text-transform: capitalize;
+    text-align: left;
+    line-height: 42px;
+    letter-spacing: 1px;
+    padding: 0 5px;
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.85);
+    transform: translateX(40px);
+    opacity: 0;
+    transition: all 0.2s ease-out 0.05s;
+    border-bottom: 1px solid #80c6a2;
+    @include screen(medium,false){
+      br {
+        display: none;
       }
+    }
+    @include screen(medium){
+      opacity: 1;
+      width: auto;
+      font-size: 13px;
+      line-height: 18px;
+      text-shadow:none;
+      transform:none;
+      display: inline-block;
+      border-bottom: 4px solid transparent;
+      &:hover {
+        border-color: #fff;
+      }
+    }
+
+    &.animate {
+      transform: translateX(0);
+      opacity: 1;
+    }
+
+
+    &.btn-facebook {
+      @include absolute(bottom left);
+      @include linear-gradient(to bottom, #1f1041 0%, #5b1a85 100%);
+      transform: translateX(0);
+      width: 100%;
+      font-size: 14px;
+      line-height: 50px;
       @include screen(medium){
-        opacity: 1;
+        line-height: 37px;
         width: auto;
-        font-size: 13px;
-        line-height: 18px;
-        text-shadow:none;
-        transform:none;
-        display: inline-block;
-        border-bottom: 4px solid transparent;
-        &:hover {
-          border-color: #fff;
+        position: initial;
+
+        &.user-name__login {
+          background: none;
+        }
+        &:after {
+          content:'';
+          display: table;
+          clear: both;
         }
       }
 
-      &.animate {
-        transform: translateX(0);
-        opacity: 1;
+      .icon-fb {
+        text-align: center;
+        float: left;
+        width: 58px;
+        height: 52px;
+        @include linear-gradient(to bottom, #160b3a 0%, #461171 100%);
+        @include screen(medium) {
+          width: 42px;
+          height: 37px;
+          background: #2b3987;
+        }
       }
 
-
-      &.btn-facebook {
-        @include absolute(bottom left);
-        @include linear-gradient(to bottom, #1f1041 0%, #5b1a85 100%);
-        transform: translateX(0);
-        width: 100%;
-        font-size: 14px;
-        line-height: 50px;
-        @include screen(medium){
-          line-height: 37px;
-          width: auto;
-          position: initial;
-
-          &.user-name__login {
-            background: none;
-          }
-          &:after {
-            content:'';
-            display: table;
-            clear: both;
-          }
-        }
-
-        .icon-fb {
-          text-align: center;
-          float: left;
-          width: 58px;
-          height: 52px;
-          @include linear-gradient(to bottom, #160b3a 0%, #461171 100%);
-          @include screen(medium) {
-            width: 42px;
-            height: 37px;
-            background: #2b3987;
-          }
-        }
-
-        .text-fb {
-          float: left;
-          width: calc(100% - 59px);
-          padding: 0 5px;
-          text-align: center;
-          white-space: nowrap;
-          @include screen(medium) {
-            padding: 0 30px;
-            background: #3b5998;
-            width: calc(100% - 42px);
-          }
+      .text-fb {
+        float: left;
+        width: calc(100% - 59px);
+        padding: 0 5px;
+        text-align: center;
+        white-space: nowrap;
+        @include screen(medium) {
+          padding: 0 30px;
+          background: #3b5998;
+          width: calc(100% - 42px);
         }
       }
     }
+  }
 
-    .open-search {
-      opacity: 0;
-      transiton:0.5s ease-out;
+  .open-search {
+    opacity: 0;
+    transiton:0.5s ease-out;
 
-      &.collapsed {
-        opacity: 1;
-      }
+    &.collapsed {
+      opacity: 1;
     }
+  }
 
-    @for $i from 1 to 7 {
-      &:nth-child(#{$i}) {
-        a {
-          @include screen(medium, false){
-            transition-delay: ($i * 0.1s) + 0.1s;
-          }
+  @for $i from 1 to 7 {
+    &:nth-child(#{$i}) {
+      a {
+        @include screen(medium, false){
+          transition-delay: ($i * 0.1s) + 0.1s;
         }
       }
     }
@@ -347,31 +377,3 @@ nav {
     }
   }
 }
-.tt-suggestion  {
-  display: block;
-  padding: 5px;
-}
-.tt-cursor {
-  background: $gray-light;
-}
-.tt-hint {
-  top:2px !important;
-}
-.tt-input{
-  vertical-align:baseline !important;
-}
-.typeahead { 
-  border: 1px solid #CCCCCC;
-  border-radius: 4px;
-  padding: 8px 12px;
-  width: 300px;
-  font-size:1.5em;
-}
-.tt-menu { 
-  width:auto;
-  min-width: 200px;
-  background: #fff;
-  top: 120% !important;
-  border-radius: 3px;
-}
-
