--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -13,11 +13,11 @@
     font-size: 0;
     position: absolute;
     top: -350%;
-    right: -50px;
+    right: -40px;
     z-index: 10;
   }
   .slick-prev {
-    left: -45px;
+    left: -40px;
   }
   h3 {
     text-transform: none;
@@ -35,7 +35,7 @@
 }
 
 .gallery__info {
-  padding-left: 40px;
+  padding: 0 55px;
 }
 
 .gallery__slide {
@@ -67,9 +67,12 @@
     cursor: pointer;
   }
   img {
-    opacity: 0.6;
-    transition:0.3s ease;
+    opacity: 0.4;
+    transition:0.3s ease-out;
     height: 90px;
+  }
+  .slick-arrow {
+    height: 100%;
   }
 
   .slick-current {
