--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -54,6 +54,7 @@
 	text-align: left;
 	background: #fff;
 	padding: 5px;
+	padding-right: 30px;
 	border:1px solid $color-light;
 
 	input {
@@ -349,6 +350,18 @@
 	}
 	li {
 		padding: 5px 0;
+	}
+	i {
+		font-size: 20px;
+	}
+	.info-fa {
+		display: inline-block;
+		vertical-align: middle;
+		margin-left: 10px;
+		color: #999;
+		b {
+			color: #333;
+		}
 	}
 }
 
