--- a/app/index.twig
+++ b/app/index.twig
@@ -88,7 +88,7 @@
 			</div>
 
 			<div class="btn-wrapper">
-				<a href="#" class="btn btn--red">Search</a>
+				<a href="search.html" class="btn btn--red">Search</a>
 			</div>	
 		</form>
 
